--- a/sass/config/fonts.scss
+++ b/sass/config/fonts.scss
@@ -25,3 +25,15 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'FontAwesome';
+    src: url('../fonts/fa-solid-900.eot');
+    src: url('../fonts/fa-solid-900.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/fa-solid-900.woff2') format('woff2'),
+        url('../fonts/fa-solid-900.woff') format('woff'),
+        url('../fonts/fa-solid-900.ttf') format('truetype'),
+        url('../fonts/fa-solid-900.svg#fa-solid-900') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
