--- a/sass/config/variables.scss
+++ b/sass/config/variables.scss
@@ -6,6 +6,7 @@
 /* =====  Fonts ==== */
 $font-family-base: 'Raleway', Arial, sans-serif;
 $font-family-secondary: 'Roboto', Arial, sans-serif;
+$font-awesome: 'FontAwesome';
 
 /* =====  Font-size ==== */
 $font-size-h1: 24px;
